--- a/SmartLibrary/SmartLibrary.csproj
+++ b/SmartLibrary/SmartLibrary.csproj
@@ -22,6 +22,7 @@
     <None Remove="Assets\bluetooth.png" />
     <None Remove="Assets\bookinfo-512x512.png" />
     <None Remove="Assets\borrowbook-512x512.png" />
+    <None Remove="Assets\database.png" />
     <None Remove="Assets\findbook-512x512.png" />
     <None Remove="Assets\flush.gif" />
     <None Remove="Assets\gplv3-127x51.png" />
@@ -32,6 +33,7 @@
 
   <ItemGroup>
     <Resource Include="Assets\bluetooth-disabled.png" />
+    <Resource Include="Assets\database.png" />
     <Resource Include="Assets\flush.gif" />
   </ItemGroup>
 
