--- a/SmartLibrary/SmartLibrary.csproj
+++ b/SmartLibrary/SmartLibrary.csproj
@@ -69,7 +69,7 @@
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
 		<PackageReference Include="System.Data.SQLite" Version="1.0.118" />
-		<PackageReference Include="WPF-UI" Version="3.0.0-preview.13" />
+		<PackageReference Include="WPF-UI" Version="3.0.0" />
 	</ItemGroup>
 
 </Project>
