--- a/SmartLibrary/SmartLibrary.csproj
+++ b/SmartLibrary/SmartLibrary.csproj
@@ -30,14 +30,19 @@
     <None Remove="Assets\bookinfo-512x512.png" />
     <None Remove="Assets\borrowbook-512x512.png" />
     <None Remove="Assets\database.png" />
+    <None Remove="Assets\databaseEmpty.png" />
     <None Remove="Assets\findbook-512x512.png" />
     <None Remove="Assets\gplv3-127x51.png" />
     <None Remove="Assets\homeBluetooth.png" />
     <None Remove="Assets\homeSetting.png" />
+    <None Remove="Assets\loading.gif" />
+    <None Remove="Assets\warning.png" />
     <None Remove="Assets\wpfui-48x48.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Assets\databaseEmpty.png" />
+    <Resource Include="Assets\loading.gif" />
     <Resource Include="Assets\bluetooth-disabled.png" />
     <Resource Include="Assets\database.png" />
     <Resource Include="Assets\.net-48x48.png" />
@@ -51,6 +56,7 @@
     <Resource Include="Assets\gplv3-127x51.png" />
     <Resource Include="Assets\homeBluetooth.png" />
     <Resource Include="Assets\homeSetting.png" />
+    <Resource Include="Assets\warning.png" />
     <Resource Include="Assets\wpfui-48x48.png" />
   </ItemGroup>
 
