完善添加书籍界面

--- a/SmartLibrary/SmartLibrary.csproj
+++ b/SmartLibrary/SmartLibrary.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net8.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows10.0.22621.0</TargetFramework>
+	<SupportedOSPlatformVersion>10.0.17763.0</SupportedOSPlatformVersion>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
@@ -36,7 +37,9 @@
     <None Remove="Assets\homeBluetooth.png" />
     <None Remove="Assets\homeSetting.png" />
     <None Remove="Assets\loading.gif" />
+    <None Remove="Assets\pic\cross.png" />
     <None Remove="Assets\pic\right.png" />
+    <None Remove="Assets\pic\tick.png" />
     <None Remove="Assets\pic\wrong.png" />
     <None Remove="Assets\warning.png" />
     <None Remove="Assets\wpfui-48x48.png" />
@@ -58,15 +61,17 @@
     <Resource Include="Assets\gplv3-127x51.png" />
     <Resource Include="Assets\homeBluetooth.png" />
     <Resource Include="Assets\homeSetting.png" />
+    <Resource Include="Assets\pic\cross.png" />
     <Resource Include="Assets\pic\right.png" />
+    <Resource Include="Assets\pic\tick.png" />
     <Resource Include="Assets\pic\wrong.png" />
     <Resource Include="Assets\warning.png" />
     <Resource Include="Assets\wpfui-48x48.png" />
   </ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="32feet.NET" Version="3.5.0" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
+		<PackageReference Include="InTheHand.Net.Bluetooth" Version="4.1.40" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
 		<PackageReference Include="System.Data.SQLite" Version="1.0.118" />
 		<PackageReference Include="WPF-UI" Version="3.0.0" />
