增加管理员选项

--- a/SmartLibrary/App.config
+++ b/SmartLibrary/App.config
@@ -9,5 +9,6 @@
 		<add key="IsCustomizedAccentColor" value="False"/>
 		<add key="CustomizedAccentColor" value="#0091F8"/>
 		<add key="Backdrop" value="Mica"/>
+		<add key="IsAdministrator" value="False"/>
 	</appSettings>
 </configuration>
