初步完成API Key设置

--- a/SmartLibrary/App.config
+++ b/SmartLibrary/App.config
@@ -10,5 +10,6 @@
 		<add key="CustomizedAccentColor" value="#0091F8"/>
 		<add key="Backdrop" value="Mica"/>
 		<add key="IsAdministrator" value="False"/>
+		<add key="APIKey" value=""/>
 	</appSettings>
 </configuration>
