修复分页和图片下载bug

--- a/SmartLibrary/App.config
+++ b/SmartLibrary/App.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
+		<add key="BookshelfDisplayIndex" value="0"/>
+		<add key="BookManageDisplayIndex" value="0"/>
 		<add key="AutoStart" value="False"/>
 		<add key="AutoStartMinimized" value="False"/>
 		<add key="TrayEnabled" value="False"/>
