--- a/SmartLibrary/SmartLibrary.csproj
+++ b/SmartLibrary/SmartLibrary.csproj
@@ -14,7 +14,8 @@
 	    <ApplicationIcon>applicationIcon.ico</ApplicationIcon>
 		<Description>Smart library</Description>
 		<Copyright>Copyright © 2024 赵杨磊.All Rights Reserved.</Copyright>
-		<AssemblyVersion>0.3.0.24161</AssemblyVersion>
+		<AssemblyVersion>0.3.1.24161</AssemblyVersion>
+		<FileVersion>0.3.1.24161</FileVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
