--- a/SmartManager/App.config
+++ b/SmartManager/App.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
+		<add key="FaceManageDisplayIndex" value="0"/>
 		<add key="Theme" value="Dark"/>
 		<add key="IsCustomizedAccentColor" value="True"/>
 		<add key="CustomizedAccentColor" value="#6B69D6"/>
