--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -6,14 +6,14 @@
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Platforms>AnyCPU;x64</Platforms>
+    <Platforms>x64</Platforms>
   </PropertyGroup>
 
 	<PropertyGroup>
 		<Description>Smart library共享资源库</Description>
 		<Copyright>Copyright © 2024 赵杨磊.All Rights Reserved.</Copyright>
-		<AssemblyVersion>0.3.3.24179</AssemblyVersion>
-		<FileVersion>0.3.3.24179</FileVersion>
+		<AssemblyVersion>0.3.4.24188</AssemblyVersion>
+		<FileVersion>0.3.4.24188</FileVersion>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
 
