--- a/SmartLibrary/SmartLibrary.csproj
+++ b/SmartLibrary/SmartLibrary.csproj
@@ -8,15 +8,15 @@
     <UseWPF>true</UseWPF>
 	<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	<Nullable>enable</Nullable>
-	<Platforms>AnyCPU;x64</Platforms>
+	<Platforms>x64</Platforms>
   </PropertyGroup>
 
     <PropertyGroup>
 	    <ApplicationIcon>applicationIcon.ico</ApplicationIcon>
 		<Description>Smart library</Description>
 		<Copyright>Copyright © 2024 赵杨磊.All Rights Reserved.</Copyright>
-		<AssemblyVersion>0.3.3.24169</AssemblyVersion>
-		<FileVersion>0.3.3.24169</FileVersion>
+		<AssemblyVersion>0.3.4.24188</AssemblyVersion>
+		<FileVersion>0.3.4.24188</FileVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
