--- a/SmartManager/SmartManager.csproj
+++ b/SmartManager/SmartManager.csproj
@@ -8,15 +8,15 @@
 	  <UseWPF>true</UseWPF>
 	  <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	  <Nullable>enable</Nullable>
-	  <Platforms>AnyCPU;x64</Platforms>
+	  <Platforms>x64</Platforms>
   </PropertyGroup>
 
 	<PropertyGroup>
 		<ApplicationIcon>applicationIcon.ico</ApplicationIcon>
 		<Description>Smart Manage</Description>
 		<Copyright>Copyright © 2024 赵杨磊.All Rights Reserved.</Copyright>
-		<AssemblyVersion>0.3.3.24179</AssemblyVersion>
-		<FileVersion>0.3.3.24179</FileVersion>
+		<AssemblyVersion>0.3.4.24188</AssemblyVersion>
+		<FileVersion>0.3.4.24188</FileVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -37,6 +37,8 @@
 		<Resource Include="Assets\background.jpg" />
 		<Resource Include="Assets\face-scan.png" />
 		<Resource Include="Assets\rfid.png" />
+		<Resource Include="Assets\DynamicPic\dark\cameraEmpty.jpg" />
+		<Resource Include="Assets\DynamicPic\light\cameraEmpty.jpg" />
 	</ItemGroup>
 
   <ItemGroup>
@@ -45,6 +47,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="OpenCvSharp4.Windows" Version="4.10.0.20240616" />
     <PackageReference Include="OpenCvSharp4.WpfExtensions" Version="4.10.0.20240616" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.4" />
+    <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.3" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.6" />
     <PackageReference Include="ViewFaceCore" Version="0.3.8" />
     <PackageReference Include="ViewFaceCore.Extension.ImageSharp" Version="0.3.7" />
