--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -12,8 +12,8 @@
 	<PropertyGroup>
 		<Description>Smart library共享资源库</Description>
 		<Copyright>Copyright © 2024 赵杨磊.All Rights Reserved.</Copyright>
-		<AssemblyVersion>0.3.5.24189</AssemblyVersion>
-		<FileVersion>0.3.5.24189</FileVersion>
+		<AssemblyVersion>0.3.6.24193</AssemblyVersion>
+		<FileVersion>0.3.6.24193</FileVersion>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
 
@@ -39,10 +39,16 @@
     <PackageReference Include="EleCho.WpfSuite" Version="0.5.3" />
     <PackageReference Include="Hompus.VideoInputDevices" Version="0.5.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
-    <PackageReference Include="OpenCvSharp4.Windows" Version="4.10.0.20240616" />
+    <PackageReference Include="OpenCvSharp4" Version="4.10.0.20240616" />
+    <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.10.0.20240616" />
     <PackageReference Include="OpenCvSharp4.WpfExtensions" Version="4.10.0.20240616" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
     <PackageReference Include="System.Data.SQLite" Version="1.0.118" />
+    <PackageReference Include="System.Drawing.Common" Version="8.0.7" />
+    <PackageReference Include="ViewFaceCore" Version="0.3.8" />
+    <PackageReference Include="ViewFaceCore.Extension.SystemDrawing" Version="0.3.7" />
+    <PackageReference Include="ViewFaceCore.model.face_detector" Version="6.0.7" />
+    <PackageReference Include="ViewFaceCore.model.face_recognizer" Version="6.0.7" />
+    <PackageReference Include="ViewFaceCore.runtime.win.x64" Version="6.0.7" />
     <PackageReference Include="WPF-UI" Version="3.0.4" />
   </ItemGroup>
 
