--- a/SmartManager/SmartManager.csproj
+++ b/SmartManager/SmartManager.csproj
@@ -15,8 +15,8 @@
 		<ApplicationIcon>applicationIcon.ico</ApplicationIcon>
 		<Description>Smart Manage</Description>
 		<Copyright>Copyright © 2024 赵杨磊.All Rights Reserved.</Copyright>
-		<AssemblyVersion>0.3.5.24189</AssemblyVersion>
-		<FileVersion>0.3.5.24189</FileVersion>
+		<AssemblyVersion>0.3.6.24193</AssemblyVersion>
+		<FileVersion>0.3.6.24193</FileVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -43,18 +43,8 @@
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
+    <PackageReference Include="EleCho.WpfSuite" Version="0.5.3" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="OpenCvSharp4.Windows" Version="4.10.0.20240616" />
-    <PackageReference Include="OpenCvSharp4.WpfExtensions" Version="4.10.0.20240616" />
-    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.4" />
-    <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.3" />
-    <PackageReference Include="System.Drawing.Common" Version="8.0.6" />
-    <PackageReference Include="ViewFaceCore" Version="0.3.8" />
-    <PackageReference Include="ViewFaceCore.Extension.ImageSharp" Version="0.3.7" />
-    <PackageReference Include="ViewFaceCore.model.face_landmarker_pts68" Version="6.0.7" />
-    <PackageReference Include="ViewFaceCore.model.face_recognizer" Version="6.0.7" />
-    <PackageReference Include="ViewFaceCore.runtime.win.x64" Version="6.0.7" />
     <PackageReference Include="WPF-UI" Version="3.0.4" />
   </ItemGroup>
 
