修复图片裁切白边问题

--- a/SmartManager/App.config
+++ b/SmartManager/App.config
@@ -2,6 +2,7 @@
 <configuration>
 	<appSettings>
 		<add key="FaceManageDisplayIndex" value="0"/>
+		<add key="IsDrawFaceRectangle" value="False"/>
 		<add key="Theme" value="Dark"/>
 		<add key="IsCustomizedAccentColor" value="True"/>
 		<add key="CustomizedAccentColor" value="#6B69D6"/>
