--- a/SmartManager/SmartManager.csproj
+++ b/SmartManager/SmartManager.csproj
@@ -15,8 +15,8 @@
 		<ApplicationIcon>applicationIcon.ico</ApplicationIcon>
 		<Description>Smart Manage</Description>
 		<Copyright>Copyright © 2024 赵杨磊.All Rights Reserved.</Copyright>
-		<AssemblyVersion>0.3.7.24194</AssemblyVersion>
-		<FileVersion>0.3.7.24194</FileVersion>
+		<AssemblyVersion>0.3.8.24195</AssemblyVersion>
+		<FileVersion>0.3.8.24195</FileVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -46,6 +46,10 @@
     <PackageReference Include="EleCho.WpfSuite" Version="0.5.3" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="WPF-UI" Version="3.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
