实现人脸比对

--- a/SmartLibrary/App.config
+++ b/SmartLibrary/App.config
@@ -7,7 +7,7 @@
 		<add key="AutoStartMinimized" value="False"/>
 		<add key="TrayEnabled" value="False"/>
 		<add key="AutoCheckUpdate" value="False"/>
-		<add key="Theme" value="Dark"/>
+		<add key="Theme" value="System"/>
 		<add key="IsCustomizedAccentColor" value="False"/>
 		<add key="CustomizedAccentColor" value="#0091F8"/>
 		<add key="Backdrop" value="Mica"/>
