--- a/SmartManager/App.config
+++ b/SmartManager/App.config
@@ -3,7 +3,8 @@
 	<appSettings>
 		<add key="FaceManageDisplayIndex" value="0"/>
 		<add key="IsDrawFaceRectangle" value="False"/>
-		<add key="Theme" value="Dark"/>
+		<add key="IsFaceComparison" value="False"/>
+		<add key="Theme" value="System"/>
 		<add key="IsCustomizedAccentColor" value="True"/>
 		<add key="CustomizedAccentColor" value="#6B69D6"/>
 		<add key="Backdrop" value="Mica"/>
