--- a/SmartManager/App.config
+++ b/SmartManager/App.config
@@ -4,7 +4,7 @@
 		<add key="FaceManageDisplayIndex" value="0"/>
 		<add key="IsDrawFaceRectangle" value="False"/>
 		<add key="IsFaceComparison" value="False"/>
-		<add key="Theme" value="System"/>
+		<add key="Theme" value="Dark"/>
 		<add key="IsCustomizedAccentColor" value="True"/>
 		<add key="CustomizedAccentColor" value="#6B69D6"/>
 		<add key="Backdrop" value="Mica"/>
