--- a/SmartManager/SmartManager.csproj
+++ b/SmartManager/SmartManager.csproj
@@ -15,8 +15,8 @@
 		<ApplicationIcon>applicationIcon.ico</ApplicationIcon>
 		<Description>Smart Manage</Description>
 		<Copyright>Copyright © 2024 赵杨磊.All Rights Reserved.</Copyright>
-		<AssemblyVersion>0.5.1.24199</AssemblyVersion>
-		<FileVersion>0.5.1.24199</FileVersion>
+		<AssemblyVersion>0.5.2.24199</AssemblyVersion>
+		<FileVersion>0.5.2.24199</FileVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -46,6 +46,7 @@
     <PackageReference Include="EleCho.WpfSuite" Version="0.5.3" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="WPF-UI" Version="3.0.4" />
+    <PackageReference Include="Yitter.IdGenerator" Version="1.0.14" />
   </ItemGroup>
 
 </Project>
