--- a/SmartManager/SmartManager.csproj
+++ b/SmartManager/SmartManager.csproj
@@ -2,7 +2,7 @@
 	
   <PropertyGroup>
 	  <OutputType>WinExe</OutputType>
-	  <TargetFramework>net8.0-windows10.0.22621.0</TargetFramework>
+	  <TargetFramework>net9.0-windows10.0.26100.0</TargetFramework>
 	  <SupportedOSPlatformVersion>10.0.18362.0</SupportedOSPlatformVersion>
 	  <ImplicitUsings>enable</ImplicitUsings>
 	  <UseWPF>true</UseWPF>
@@ -14,9 +14,9 @@
 	<PropertyGroup>
 		<ApplicationIcon>applicationIcon.ico</ApplicationIcon>
 		<Description>Smart Manage</Description>
-		<Copyright>Copyright © 2024 赵杨磊.All Rights Reserved.</Copyright>
-		<AssemblyVersion>0.5.6.24220</AssemblyVersion>
-		<FileVersion>0.5.6.24220</FileVersion>
+		<Copyright>Copyright © 2025 赵杨磊.All Rights Reserved.</Copyright>
+		<AssemblyVersion>0.6.0.25095</AssemblyVersion>
+		<FileVersion>0.6.0.25095</FileVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -42,10 +42,11 @@
 	</ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
-    <PackageReference Include="EleCho.WpfSuite" Version="0.6.3" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
-    <PackageReference Include="WPF-UI" Version="3.0.5" />
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageReference Include="EleCho.WpfSuite" Version="0.10.7" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.3" />
+    <PackageReference Include="WPF-UI" Version="4.0.2" />
+    <PackageReference Include="WPF-UI.DependencyInjection" Version="4.0.2" />
     <PackageReference Include="Yitter.IdGenerator" Version="1.0.14" />
   </ItemGroup>
 
