增加DataGrid的按是否借出排序

--- a/SmartLibrary/App.config
+++ b/SmartLibrary/App.config
@@ -11,7 +11,7 @@
 		<add key="IsCustomizedAccentColor" value="False"/>
 		<add key="CustomizedAccentColor" value="#0091F8"/>
 		<add key="Backdrop" value="Mica"/>
-		<add key="IsAdministrator" value="False"/>
+		<add key="IsAdministrator" value="True"/>
 		<add key="APIKey" value=""/>
 	</appSettings>
 </configuration>
